remove eval code and refactor calc

--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
           </div>
           <div class="row" id="result">
             <form name="calc">
-              <input type="text" class="screen text-right" name="result" readonly>
+              <input id="screen" type="text" class="screen text-right" name="result" readonly>
             </form>
           </div>
           <div class="row">
-            <button id="allClear" type="button" class="btn btn-danger" onclick="clearScreen()">AC</button>
-            <button id="clear" type="button" class="btn btn-warning" onclick="clearScreen()">CE</button>
-            <button id="%" type="button" class="btn btn-info" onclick="myFunction(this.id)">%</button>
-            <button id="/" type="button" class="btn btn-info" onclick="myFunction(this.id)">÷</button>
+            <button id="allClear" type="button" class="btn btn-danger">AC</button>
+            <button id="clear" type="button" class="btn btn-warning">CE</button>
+            <button id="%" type="button" class="btn btn-info" >%</button>
+            <button id="/" type="button" class="btn btn-info" >÷</button>
           </div>
           <div class="row">
-            <button id="7" type="button" class="btn btn-info" onclick="myFunction(this.id)">7</button>
-            <button id="8" type="button" class="btn btn-info" onclick="myFunction(this.id)">8</button>
-            <button id="9" type="button" class="btn btn-info" onclick="myFunction(this.id)">9</button>
-            <button id="*" type="button" class="btn btn-info" onclick="myFunction(this.id)">x</button>
+            <button id="7" type="button" class="btn btn-info" >7</button>
+            <button id="8" type="button" class="btn btn-info" >8</button>
+            <button id="9" type="button" class="btn btn-info" >9</button>
+            <button id="*" type="button" class="btn btn-info" >x</button>
           </div>
           <div class="row">
-            <button id="4" type="button" class="btn btn-info" onclick="myFunction(this.id)">4</button>
-            <button id="5" type="button" class="btn btn-info" onclick="myFunction(this.id)">5</button>
-            <button id="6" type="button" class="btn btn-info" onclick="myFunction(this.id)">6</button>
-            <button id="-" type="button" class="btn btn-info" onclick="myFunction(this.id)">-</button>
+            <button id="4" type="button" class="btn btn-info" >4</button>
+            <button id="5" type="button" class="btn btn-info" >5</button>
+            <button id="6" type="button" class="btn btn-info" >6</button>
+            <button id="-" type="button" class="btn btn-info" >-</button>
           </div>
           <div class="row">
-            <button id="1" type="button" class="btn btn-info" onclick="myFunction(this.id)">1</button>
-            <button id="2" type="button" class="btn btn-info" onclick="myFunction(this.id)">2</button>
-            <button id="3" type="button" class="btn btn-info" onclick="myFunction(this.id)">3</button>
-            <button id="+" type="button" class="btn btn-info" onclick="myFunction(this.id)">+</button>
+            <button id="1" type="button" class="btn btn-info" >1</button>
+            <button id="2" type="button" class="btn btn-info" >2</button>
+            <button id="3" type="button" class="btn btn-info" >3</button>
+            <button id="+" type="button" class="btn btn-info" >+</button>
           </div>
           <div class="row">
-            <button id="0" type="button" class="btn btn-info" onclick="myFunction(this.id)">0</button>
-            <button id="." type="button" class="btn btn-info" onclick="myFunction(this.id)">.</button>
-            <button id="equals" type="button" class="btn btn-success" onclick="calculate()">=</button>
+            <button id="0" type="button" class="btn btn-info" >0</button>
+            <button id="." type="button" class="btn btn-info" >.</button>
+            <button id="equals" type="button" class="btn btn-success">=</button>
             <button id="blank" type="button" class="btn btn-info">&nbsp;</button>
           </div>
         </div>
